--- a/Cointopay/PaymentGateway/view/frontend/layout/cms_page_view.xml
+++ b/Cointopay/PaymentGateway/view/frontend/layout/cms_page_view.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0"?>
-<!--
-/**
- * Copyright © 2018 Cointopay. All rights reserved.
- * See COPYING.txt for license details.
- */
--->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
 	<body>
 		<referenceContainer name="content">
-			<block class="Cointopay\PaymentGateway\Block\Thankyou" name="order.details.success" template="Cointopay_PaymentGateway::order/success.phtml">           
+			<block class="Magento\Framework\View\Element\Template" name="order.details.success" template="Cointopay_PaymentGateway::order/osc_success.phtml" cacheable="false">           
         </block>
 		</referenceContainer>
 		
