change fire sales event

--- a/Cointopay/PaymentGateway/view/frontend/templates/order/osc_success.phtml
+++ b/Cointopay/PaymentGateway/view/frontend/templates/order/osc_success.phtml
@@ -173,5 +173,5 @@ if ($customerSession->getCointopayresponseGateway() && $customerSession->getCoin
 	$customerSession->unsCointopayresponselastBaseUrl();
 	?>
 	</div>
-<?php } ?>
+<?php }
 
